[gd_scene load_steps=4 format=2]

[ext_resource path="res://Dummy/Dummy.gd" type="Script" id=1]
[ext_resource path="res://Dummy/art/Dummy.png" type="Texture" id=2]

[sub_resource type="SpriteFrames" id=1]

animations = [ {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
} ]

[node name="Dummy" type="KinematicBody2D"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="Sprite" type="AnimatedSprite" parent="." index="0"]

frames = SubResource( 1 )
animation = "idle"
_sections_unfolded = [ "Transform" ]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="." index="1"]

position = Vector2( 0.736858, 0.790558 )
build_mode = 0
polygon = PoolVector2Array( -5.73686, 39.2094, 4.26314, 39.2094, 4.26314, 24.2094, 14.2631, 24.2094, 14.2631, -40.7906, -15.7369, -40.7906, -15.7369, 24.2094, -5.73686, 24.2094 )
_sections_unfolded = [ "Transform" ]

[node name="Label" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -40.0
margin_top = -90.0
margin_right = 37.0
margin_bottom = -76.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Testing Text"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="WaitTimer" type="Timer" parent="." index="3"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[node name="HideTimer" type="Timer" parent="." index="4"]

process_mode = 1
wait_time = 2.0
one_shot = true
autostart = false

[connection signal="timeout" from="WaitTimer" to="." method="_on_WaitTimer_timeout"]

[connection signal="timeout" from="HideTimer" to="." method="_on_HideTimer_timeout"]


